netpol/denyall.yaml
# Deny all pod communication in default namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
